[package]
name = "heraclitus-oracle"
description = "Rust implementation of an Aaronson oracle"
repository = "https://github.com/pierwill/heraclitus-oracle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
